--- a/power/src/locales/messages.en.xlf
+++ b/power/src/locales/messages.en.xlf
@@ -1489,6 +1489,15 @@
         <target>Development contribution/cost reimbursement liable and taxable according to the Municipal Tax Act</target>
       </segment>
     </unit>
+    <unit id="6013256967591081588">
+      <notes>
+        <note category="location">src/app/shared/geosearch/geosearch.service.ts:68</note>
+      </notes>
+      <segment state="translated">
+        <source>Es ist ein Fehler aufgetreten</source>
+        <target>An error has occurred</target>
+      </segment>
+    </unit>
     <unit id="4247324030645335768">
       <notes>
         <note category="location">src/app/static/feedback/feedback.component.ts:15</note>
@@ -1970,7 +1979,7 @@
     </unit>
     <unit id="8488547527396922136">
       <notes>
-        <note category="location">src/app/fragebogen/details/details.component.ts:86</note>
+        <note category="location">src/app/fragebogen/fillout/fillout.component.ts:97</note>
       </notes>
       <segment state="translated">
         <source>Laden fehlgeschlagen</source>
@@ -1979,7 +1988,7 @@
     </unit>
     <unit id="2688283467752225426">
       <notes>
-        <note category="location">src/app/fragebogen/details/details.component.html:60</note>
+        <note category="location">src/app/fragebogen/public-dashboard/public-dashboard.component.html:96</note>
       </notes>
       <segment state="translated">
         <source>Veröffentlicht</source>
@@ -2069,7 +2078,7 @@
     </unit>
     <unit id="4028295370197925352">
       <notes>
-        <note category="location">src/app/fragebogen/details/settings/settings.component.ts:70</note>
+        <note category="location">src/app/fragebogen/fillout/fillout.component.ts:130</note>
       </notes>
       <segment state="translated">
         <source>Speichern fehlgeschlagen</source>
@@ -3349,13 +3358,13 @@ This can not be reversed!</target>
         <target>Date</target>
       </segment>
     </unit>
-    <unit id="2278763268677546133">
+    <unit id="3804190189687550549">
       <notes>
         <note category="location">src/app/fragebogen/editor/question-settings/question-settings.component.html:201</note>
       </notes>
       <segment state="translated">
-        <source>Datum &amp; Uhrzeit</source>
-        <target>Date &amp; Time</target>
+        <source>Datum und Uhrzeit</source>
+        <target>Date and time</target>
       </segment>
     </unit>
     <unit id="8115083664628466958">
@@ -5277,43 +5286,43 @@ This can not be reversed!</target>
     </unit>
     <unit id="8862057317659190614">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:79</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:78</note>
       </notes>
       <segment state="translated">
         <source>Preisentwicklung Niedersachsen, gesamt</source>
         <target>Price development Lower Saxony, overall</target>
       </segment>
     </unit>
-    <unit id="3407170915745399663">
+    <unit id="5307623643760357941">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:80</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:79</note>
       </notes>
       <segment state="translated">
-        <source>gebrauchte Eigenheime</source>
-        <target>used home</target>
+        <source>Gebrauchte Eigenheime</source>
+        <target>Used homes</target>
       </segment>
     </unit>
     <unit id="1088042577119915820">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:81</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:80</note>
       </notes>
       <segment state="translated">
         <source>EH</source>
         <target>UH</target>
       </segment>
     </unit>
-    <unit id="8465384391201708412">
+    <unit id="6062453738307472931">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:82</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:81</note>
       </notes>
       <segment state="translated">
-        <source>gebrauchte Eigentumswohnungen</source>
-        <target>used condominiums</target>
+        <source>Gebrauchte Eigentumswohnungen</source>
+        <target>Used condominiums</target>
       </segment>
     </unit>
     <unit id="6354661807949531329">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:83</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:82</note>
       </notes>
       <segment state="translated">
         <source>EW</source>
@@ -5322,7 +5331,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="1551858290218147096">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:84</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:83</note>
       </notes>
       <segment state="translated">
         <source>Vergleich Preisentwicklung von städtischen und ländlichen Regionen</source>
@@ -5331,7 +5340,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="4316260054616310474">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:85</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:84</note>
       </notes>
       <segment state="translated">
         <source>Preisentwicklung nach städtischen und ländlichen Regionen</source>
@@ -5340,43 +5349,43 @@ This can not be reversed!</target>
     </unit>
     <unit id="6512166400814631812">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:86</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:85</note>
       </notes>
       <segment state="translated">
         <source>Vergleich zusammengefasster Regionen</source>
         <target>Comparison of summarized regions</target>
       </segment>
     </unit>
-    <unit id="1582871385728865172">
+    <unit id="6448279684130108067">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:87</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:86</note>
       </notes>
       <segment state="translated">
-        <source>städtische Regionen</source>
-        <target>urban regions</target>
+        <source>Städtische Regionen</source>
+        <target>Urban regions</target>
       </segment>
     </unit>
     <unit id="4753259279067371249">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:88</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:87</note>
       </notes>
       <segment state="translated">
         <source>SR</source>
         <target>UR</target>
       </segment>
     </unit>
-    <unit id="2851454544784459698">
+    <unit id="2165887996252736733">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:89</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:88</note>
       </notes>
       <segment state="translated">
-        <source>ländliche Regionen</source>
-        <target>rural regions</target>
+        <source>Ländliche Regionen</source>
+        <target>Rural regions</target>
       </segment>
     </unit>
     <unit id="2561517474553080273">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:90</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:89</note>
       </notes>
       <segment state="translated">
         <source>LR</source>
@@ -5385,7 +5394,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="6519912233918863557">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:91</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:90</note>
       </notes>
       <segment state="translated">
         <source>Hannover</source>
@@ -5394,7 +5403,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="5860480415256546602">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:92</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:91</note>
       </notes>
       <segment state="translated">
         <source>Braunschweig</source>
@@ -5403,7 +5412,7 @@ This can not be reversed!</target>
     </unit>
     <unit id="7296884130288172531">
       <notes>
-        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:93</note>
+        <note category="location">src/app/immobilien/immobilien/immobilien.runtime.ts:92</note>
       </notes>
       <segment state="translated">
         <source>Hannover - Braunschweig - Wolfsburg</source>
@@ -5418,15 +5427,6 @@ This can not be reversed!</target>
         <source>Quelle: Oberer Gutachterausschuss für
 Grundstückswerte in Niedersachsen</source>
         <target>Source: Upper Advisory Committee for Property values in Lower Saxony</target>
-      </segment>
-    </unit>
-    <unit id="605904030458936187">
-      <notes>
-        <note category="location">src/app/shared/geosearch/geosearch.service.ts:68</note>
-      </notes>
-      <segment state="translated">
-        <source>Es ist ein Fehler aufgetreten: </source>
-        <target>An error has occurred:</target>
       </segment>
     </unit>
     <unit id="2331129654501752489">
